
include $(top_srcdir)/src/common.mk

noinst_HEADERS = \
  cmap-op-define.h \
  cmap-op.h \
  cmap-op-handler-define.h \
  cmap-op-handler.h \
  cmap-op-handler-string.h

noinst_LTLIBRARIES = libop.la

libop_la_SOURCES = \
  cmap-op.c \
  cmap-op-handler-double.c \
  cmap-op-handler-int.c \
  cmap-op-handler-string.c
