
include $(top_srcdir)/src/common.mk

noinst_HEADERS = \
  cmap-iterator-define.h \
  cmap-slist-define.h \
  cmap-slist.h \
  cmap-sset-define.h \
  cmap-sset.h \
  cmap-stree-define.h \
  cmap-stree.h \
  cmap-stree-iterator.h

noinst_LTLIBRARIES = libscore.la

libscore_la_SOURCES = \
  cmap-slist.c \
  cmap-sset.c \
  cmap-stree.c \
  cmap-stree-iterator.c
