
include $(top_srcdir)/src/tool/common.mk

noinst_HEADERS = \
  cmap-parser-util-argnames.h \
  cmap-parser-util-params.h

noinst_LTLIBRARIES = libparser-util.la

libparser_util_la_SOURCES = \
  cmap-parser-util-argnames.c \
  cmap-parser-util-params.c
libparser_util_la_CFLAGS = $(CMAP_TOOL_CFLAGS)
