
include $(top_srcdir)/src/tool/common.mk

noinst_HEADERS = \
  cmap-parser-arg.h \
  cmap-parser-block.h \
  cmap-parser-cmp-define.h \
  cmap-parser-cmp.h \
  cmap-parser-creator.h \
  cmap-parser-op-define.h \
  cmap-parser-op.h \
  cmap-parser-params.h \
  cmap-parser-part-define.h \
  cmap-parser-part.h \
  cmap-parser-process.h \
  cmap-parser-this-args.h \
  cmap-parser-util-define.h \
  cmap-parser-util.h \
  cmap-parser-var.h

noinst_LTLIBRARIES = libparser.la

libparser_la_SOURCES = \
  cmap-parser-arg.c \
  cmap-parser-block.c \
  cmap-parser-cmp.c \
  cmap-parser-creator.c \
  cmap-parser-op.c \
  cmap-parser-params.c \
  cmap-parser-part.c \
  cmap-parser-process.c \
  cmap-parser-this-args.c \
  cmap-parser-util.c \
  cmap-parser-var.c
